Implemented full working neural net and some example with XOR-operator

--- a/TicTacToe/TicTacToe.vcxproj.filters
+++ b/TicTacToe/TicTacToe.vcxproj.filters
@@ -27,12 +27,30 @@
     <ClInclude Include="Connector.h">
       <Filter>Headerdateien</Filter>
     </ClInclude>
+    <ClInclude Include="Neuron.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="Net.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
+    <ClInclude Include="TrainingData.h">
+      <Filter>Headerdateien</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="stdafx.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
     <ClCompile Include="TicTacToe.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Neuron.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="Net.cpp">
+      <Filter>Quelldateien</Filter>
+    </ClCompile>
+    <ClCompile Include="TrainingData.cpp">
       <Filter>Quelldateien</Filter>
     </ClCompile>
   </ItemGroup>
