New working Neural Net for the game tic tac toe

--- a/TicTacToe/TicTacToe.vcxproj
+++ b/TicTacToe/TicTacToe.vcxproj
@@ -150,6 +150,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="Connector.h" />
+    <ClInclude Include="GraphicFunctions.h" />
     <ClInclude Include="Net.h" />
     <ClInclude Include="Neuron.h" />
     <ClInclude Include="stdafx.h" />
